--- a/module3/style.css
+++ b/module3/style.css
@@ -44,9 +44,9 @@
 .main-title{
   margin-bottom: 15px;
   text-align: center;
-  color: #ff4532;
+  color: #f011b4;
   font-size: 50px;
-  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-family: "Arial Verdana Helvetica", cursive, sans-serif;
   font-weight: bold;
 }
 
@@ -77,18 +77,20 @@ li{
 }
 
 .content-box{
+	border: 5px solid black;
 	margin: 20px;
 	width: auto;
 	height: auto;
 	color: black;
-	background-color: rgba(0,0,0,0.2);
-	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-size: 16px;
+	background-color: #c9c1f7;
+	font-family: "Arial Verdana Helvetica", cursive, sans-serif;
 	padding: 20px;
 }
 
 .item-name{
 	text-align: center;
-	font-size: 20px;
+	font-size: 24px;
 	font-weight: bold;
 }
 
